--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "DATA_BASE_NAME", '"contacts-db"'
     }
     buildTypes {
         release {
@@ -52,8 +54,23 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
 
+    // Google Maps
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
 
+    // ButterKnife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    //Dagger 2
+    implementation 'com.google.dagger:dagger:2.16'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
+    //implementation 'com.google.dagger:dagger-android-support:2.16' // if you use the support libraries
+    //annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
+
+    //Retrofit 2
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
