--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,30 +22,27 @@
 
 
     <application
-        android:name=".ContactsListApp"
+        android:name=".app.ContactListApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".ui.listing.MainActivity">
+        <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.detail.DetailsActivity"
-            android:parentActivityName=".ui.listing.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.listing.MainActivity" />
-        </activity>
-        <activity
-            android:name=".ui.detail.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+        <!--<activity-->
+            <!--android:name=".ui.contact.DetailsActivity"-->
+            <!--android:parentActivityName=".ui.main.MainActivity">-->
+            <!--<meta-data-->
+                <!--android:name="android.support.PARENT_ACTIVITY"-->
+                <!--android:value=".ui.main.MainActivity" />-->
+        <!--</activity>-->
 
         <meta-data
             android:name="com.google.android.gms.version"
